--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "node server.js"
   },
   "dependencies": {
+    "copy-paste": "^1.5.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
