--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "file-sharer",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon server.js",
